# bazel_clang_format

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  clang_format.bzl  defs.bzl  update.template.sh  wrapper.sh
.github/workflows/: check.yml
example/: README.md
example/default/: .bazelrc  BUILD.bazel  main.cpp
example/format-binary/: .bazelrc  BUILD.bazel  WORKSPACE.bazel  main.cpp
example/format-config/: .bazelrc  .clang-format  BUILD.bazel  WORKSPACE.bazel
example/format-ignore/: .bazelrc  BUILD.bazel
